--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Shop cơm tró Michaeng! </title>
+        <title>Page cơm tró Michaeng! </title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
     </head>
@@ -12,18 +12,10 @@
             <style> h1 {
                 color: brown;
             }</style>
-            <p>It's not only writers who can benefit from this free online tool. If you're a programmer who's working on a project where blocks of text are needed, this tool can be a great way to get that. It's a good way to test your programming and that the tool being created is working well.</p>
-            <input name="agree" type="radio">
-            <input name="agree" type="radio">
-            <button>Đăng ký trở thành thuyền viên</button>
+            <p>Love is doing small things with great love.</p>
+            
             <img src="https://pbs.twimg.com/media/FbtE3_YXEAIHXOe?format=jpg&name=small" alt="ảnh Michaeng">
-            <a href="https://twitter.com/twicedaaamc">Đến ổ cơm chó ngay!</a>
-            <ul>
-                <li>Nguyen Nhan</li>
-                <li>Dien bien</li>
-                <li>Ket Qua</li>
-                <li>Bài Học</li>
-            </ul>
+            <a href="https://www.facebook.com/groups/656002494905146"><button>Đăng ký trở thành thuyền viên ngay hôm nay!</button></a>
             <table>
                 <thead>
                     <th>Số hiệu</th>
