--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <div>
-            <h1>Ở đây chúng tôi có Michaeng!</h1>
+            <h1 style="text-align: center;">Ở đây chúng tôi có Michaeng!</h1>
             <style> h1 {
                 color: brown;
             }</style>
