--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page cơm tró Michaeng! </title>
+        <title class="center">Page cơm tró Michaeng! </title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
     </head>
