--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title class="center">Page cơm tró Michaeng! </title>
+        <title>Page cơm tró Michaeng! </title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <div>
-            <h1 style="text-align: center;">Ở đây chúng tôi có Michaeng!</h1>
+            <h1 class="center">Ở đây chúng tôi có Michaeng!</h1>
             <style> h1 {
                 color: brown;
             }</style>
