--- a/index.html
+++ b/index.html
@@ -8,19 +8,16 @@
 
     <body>
         <div>
-            <h1 style="text-align: center;">Ở đây chúng tôi có Michaeng!</h1>
-            <style> h1 {
-                color: brown;
-            }</style>
-            <p >Love is doing small things with great love.</p>
+            <h1>Ở đây chúng tôi có Michaeng!</h1>
+            <p>Love is doing small things with great love.</p>
             
             <img src="https://pbs.twimg.com/media/FbtE3_YXEAIHXOe?format=jpg&name=small" alt="ảnh Michaeng" class="center">
             <a class="center" href="https://www.facebook.com/groups/656002494905146"><button>Đăng ký trở thành thuyền viên ngay hôm nay!</button></a>
-            <table style="text-align: center;">
+            <table style="margin: auto;">
                 <thead>
                     <th>Số hiệu</th>
                     <th>Tên thuyền viên</th>
-                    <th>Địa chỉ</th>
+                    <th>Nơi sinh</th>
                 </thead>
     
                 <tbody>
