--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             <p>Love is doing small things with great love.</p>
             
             <img src="https://pbs.twimg.com/media/FbtE3_YXEAIHXOe?format=jpg&name=small" alt="ảnh Michaeng" class="center">
-            <a class="center" href="https://www.facebook.com/groups/656002494905146"><button>Đăng ký trở thành thuyền viên ngay hôm nay!</button></a>
+            <div class="text-center">
+                <a href="https://www.facebook.com/groups/656002494905146"><button>Đăng ký trở thành thuyền viên ngay hôm nay!</button></a>
+            </div>
             <table style="margin: auto;">
                 <thead>
                     <th>Số hiệu</th>
