--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <div>
             <div class="head-menu">
+                <p>!</p>
                 <div class="scroll-menu">
                     <p class="lh">Menu</p>
                     <div id="menu-list">
@@ -32,7 +33,7 @@
                 <div class="text-center">
                     <button><a class="lh" href="https://www.facebook.com/groups/656002494905146">Đăng ký trở thành thuyền viên!</a></button>
                 </div>
-                <img src="https://pbs.twimg.com/media/FbtE3_YXEAIHXOe?format=jpg" alt="ảnh Michaeng" width="50%" class="center">
+                <img src="https://pbs.twimg.com/media/FbtE3_YXEAIHXOe?format=jpg" alt="ảnh Michaeng" width="50%" class="img-center">
                 
                 <table style="margin: auto;">
                     <thead style="color: rgb(52, 170, 66);">
